fixes the placeholder text being cut off when the backup font of arial is used

--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,8 @@ body {
 .add-quote {
   border-style: none;
   background-color: transparent;
-  width: 255px;
-  height: auto;
+  width: 280px;
+  width: auto;
   font-family: 'Minion Cyrillic Semibold', arial;
   font-size: 30px;
   color: #3a3a3a;
